--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,19 @@ html,body{
     line-height: 1.5;
 }
 
+img{
+    display: block;
+    margin: 20px auto;
+
+}
+
 #navbar{
     position: fixed;
     min-width: 290px;
     width: 300px;
     left: 0;
     border-right: solid;
-    border-color: rgba(0, 0, 0, 0.3); 
+    border-color: rgba(71, 71, 71, 0.3); 
     height: 100%;
     top: 0;
 }
@@ -19,6 +25,7 @@ html,body{
 #main-doc{
     position: absolute;
     margin-left: 310px;
+    padding: 20px;
 }
 
 header{
@@ -26,11 +33,46 @@ header{
     color: black;
     font-size: 1.8em;
     margin: 10px;
+    font-weight: 450;
 }
 
 #main-doc header{
     text-align: left;
+    margin: 0;
 }
+
+section article{
+    color: #4d4e53;
+    margin: 15px;
+    font-size: 1em;
+}
+
+#navbar li{
+    color: #4d4e53;
+    border-top: 1px solid;
+    border-color: #4d4e53;
+    list-style: none;
+    width: 100%;
+}
+
+section li {
+    margin: 15px 0px 0px 20px;
+  }
+
+#navbar ul{
+    padding: 0;
+}
+
+#navbar a{
+    text-decoration: none;
+    color: #4d4e53;
+    display: block;
+    padding: 10px 30px;
+    font-size: 1.05em;
+
+}
+
+
 
 code {
     display: block;
