--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,9 @@ li code:not(.exep){
     background-color: #1e1e1e; /* Mantiene el fondo oscuro */
     color: #d4d4d4;
 }
+
+#navbar a:hover{
+    scale: 1.1;
+    padding-left: 40px;
+    color: #a1a2a2;
+}
