--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ section li {
     display: block;
     padding: 10px 30px;
     font-size: 1.05em;
+    transition: all ease 0.2s;
 
 }
 
@@ -104,5 +105,9 @@ li code:not(.exep){
 #navbar a:hover{
     scale: 1.1;
     padding-left: 40px;
-    color: #a1a2a2;
+    color: #959595;
+    background-color: rgb(232, 246, 255);
+    border: 1px solid #4d4e534b;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.086);
+    border-radius: 5px;
 }
