--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,39 @@ li code:not(.exep){
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.086);
     border-radius: 5px;
 }
+
+@media only screen and (max-width: 815px) {
+    /* For mobile phones: */
+    #navbar ul {
+      height: 207px;
+    }
+  
+    #navbar {
+      background-color: white;
+      position: absolute;
+      top: 0;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      max-height: 275px;
+      border: none;
+      z-index: 1;
+    }
+  
+    #main-doc {
+      position: relative;
+      margin-left: 0px;
+      margin-top: 600px;
+    }
+
+    #navbar a:hover{
+        scale: 1.1;
+        padding-left: 60px;
+        color: #959595;
+        background-color: rgb(232, 246, 255);
+        border: 1px solid #4d4e534b;
+        box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.086);
+        border-radius: 5px;
+    }
+  }
+  
