--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ img{
     position: absolute;
     margin-left: 310px;
     padding: 20px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 header{
@@ -58,7 +60,7 @@ section article{
 
 section li {
     margin: 15px 0px 0px 20px;
-    word-wrap: break-word;
+    word-break: break-word;
   }
 
 #navbar ul{
