--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+html {
+    scroll-behavior: smooth;
+}
+
 html,body{
     color: #4d4e53;
     background-color: #ffffff;
     font-family: 'Open Sans', Arial, sans-serif;
     line-height: 1.5;
     overflow-x: hidden;
+    
 }
 
 img{
@@ -21,6 +26,7 @@ img{
     border-color: rgba(71, 71, 71, 0.3); 
     height: 100%;
     top: 0;
+    transition: all 0.3s ease-in-out;
 }
 
 #main-doc{
@@ -29,6 +35,7 @@ img{
     padding: 20px;
     max-width: 100%;
     overflow-x: hidden;
+    transition: all 0.3s ease-in-out;
 }
 
 header{
@@ -108,7 +115,7 @@ li code:not(.exep){
 }
 
 #navbar a:hover{
-    scale: 1.1;
+    transform: scale(1.1);
     padding-left: 40px;
     color: #959595;
     background-color: rgb(232, 246, 255);
@@ -143,7 +150,7 @@ li code:not(.exep){
     }
 
     #navbar a:hover{
-        scale: 1.1;
+        transform: scale(1.1);
         padding-left: 60px;
         color: #959595;
         background-color: rgb(232, 246, 255);
@@ -155,5 +162,35 @@ li code:not(.exep){
     section li{
         margin-left: -15px;
     }
+    img{
+        width: 3em;
+        height: auto;
+    }
 }
-  
+
+@media only screen and (max-height: 650px) and (min-width: 816px) {
+
+
+    
+    img{
+        width: 2em;
+        height: auto;
+        margin: 13px auto 0 auto;
+        padding: 0;
+    }
+
+    .titulo{
+        font-size: 1.4em;
+    }
+
+    
+
+
+
+    #navbar a{
+        padding: 8px 30px;
+        font-size: 1em;
+    
+    }
+}
+
